--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     }
     
     .navbar {
-        background-color: #0078D7;
+        background-color: green;
         padding: 12px;
         font-family: 'Montserrat', sans-serif;
     }
@@ -19,7 +19,7 @@ body {
     .fare-guide {
         font-size: 28px;
         font-weight: bold;
-        background-color: #000;
+        background-color: red;
         color: white;
         text-align: center;
         padding: 12px;
@@ -27,8 +27,8 @@ body {
     }
     
     .ticket-price {
-        background-color: #001f3f;
-        color: white;
+        background-color: yellowgreen;
+        color: black;
         font-size: 50px;
         font-weight: bold;
         padding: 25px;
@@ -107,4 +107,52 @@ body {
         border-width: 5px;
         border-radius: 7px;
         background-color: lightblue;
+    }
+
+    #SearchBtn{
+        background-color: white;
+    }
+
+    .description{
+        text-align: center;
+        font-style: italic;
+        font-weight: bold;
+    }
+
+    .Reminder{
+       
+        background-color: skyblue;
+        width: 50%;
+
+        margin: auto;
+
+        border-radius: 35px;
+        padding: 15px;
+
+        
+        
+        
+    }
+
+    .Top-Reminder{
+        margin-left: 5px;
+        font-style: italic;
+        font-weight: bold;
+        margin-bottom: 7px;
+    }
+
+    .Reminder-desc{
+        background-color: azure;
+        padding: 4px;
+        border-radius: 7px;
+        border-style: solid;
+        font-style: italic;
+    }
+
+    .Reminder_No{
+        background-color:white ;
+        border-radius:50% ;
+        border-style: solid;
+        padding: 5px;
+        font-style: normal;
     }
