--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-        background-color: #f0f8ff;
+        background-color: #F2D8D8;
         font-size: 16px;
         font-family: 'Poppins', sans-serif;
     }
     
     .navbar {
-        background-color: green;
+        background-color: #5C8984;
         padding: 12px;
         font-family: 'Montserrat', sans-serif;
     }
@@ -19,7 +19,7 @@ body {
     .fare-guide {
         font-size: 28px;
         font-weight: bold;
-        background-color: red;
+        background-color: #545B77;
         color: white;
         text-align: center;
         padding: 12px;
